WE'll need gee obviously

--- a/CelticEgyptianRatscrewKata/Makefile
+++ b/CelticEgyptianRatscrewKata/Makefile
@@ -5,7 +5,7 @@ all: CelticEgyptianRatscrewKata.so
 
 CERK_SOURCE_DIRS=. GameSetup Game SnapRules
 CelticEgyptianRatscrewKata_SOURCES=$(foreach folder, $(CERK_SOURCE_DIRS),$(wildcard CelticEgyptianRatscrewKata/$(folder)/*.vala))
-
+CelticEgyptianRatscrewKata_PACKAGES=gee-0.8
 
 
 %.so %.vapi %.h: $$($$*_SOURCES)
