allow cleaning output and temporary files.

--- a/CelticEgyptianRatscrewKata/Makefile
+++ b/CelticEgyptianRatscrewKata/Makefile
@@ -5,8 +5,13 @@ all: CelticEgyptianRatscrewKata.so
 
 CERK_SOURCE_DIRS=. GameSetup Game SnapRules
 CelticEgyptianRatscrewKata_SOURCES=$(foreach folder, $(CERK_SOURCE_DIRS),$(wildcard CelticEgyptianRatscrewKata/$(folder)/*.vala))
-CelticEgyptianRatscrewKata_PACKAGES=gee-0.8
+CelticEgyptianRatscrewKata_PACKAGES=gee-0.8 glib-2.0
 
 
 %.so %.vapi %.h: $$($$*_SOURCES)
 	valac-0.24 $(foreach pkg, $($*_PACKAGES),--pkg $(pkg)) -X -I. --vapidir=. --library=$* -H $*.h $($*_SOURCES) -X -fpic -X -shared -g -o $*.so -X -w
+
+clean:
+	rm -f *.so *.h *.vapi
+	rm -f $(patsubst %.vala,%.vala.c,$(SOURCES) $(CelticEgyptianRatscrewKata_SOURCES))
+	rm -f $(patsubst %.vala,%.c,$(SOURCES) $(CelticEgyptianRatscrewKata_SOURCES))
